2011-02-05  Matt Zagrabelny <zagrabelny@users.sourceforge.net>
	* common/game.c, common/game.h, common/gtk/game-rules.c,
	common/gtk/game-rules.h: Added checkbox to enable experimental
	Cities and Knights expansion rules.

2011-01-26  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac: Work version is 0.12.5.

2011-01-26  Roland Clobus <rclobus@rclobus.nl>
	* Released 0.12.4.

2011-01-26  Roland Clobus <rclobus@rclobus.nl>
	* MinGW/gdk-pixbuf.loaders, MinGW/Makefile.am, pioneers.nsi.in,
	macros/type_socklen_t.m4, configure.ac, Makefile.am, README.MinGW:
	Fixed the MinGW port.
	* client/ai/lobbybot.c: Mention 0.12.4.
	* docs/README.release: Use the tag for the release build.

2011-01-23  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/data/themes/ccFlickr/Makefile.am: Fix typo in path.

2011-01-15  Roland Clobus <rclobus@rclobus.nl>
	* NEWS: Updated for release of 0.12.4
	* Makefile.am: Remove intltool-*.in, fixes 'make distcheck' on Debian
	stable

2011-01-10  Roland Clobus <rclobus@rclobus.nl>
	* common/Makefile.am: Fix build for Mac OSX (don't use echo -n), with
	thanks to Camillo Lugaresi (camillol@users.sourceforge.net) for
	reporting and testing.

2011-01-08  Roland Clobus <rclobus@rclobus.nl>
	* README.Cygwin: Added information about gob2

2010-12-29  Roland Clobus <rclobus@rclobus.nl>
	* client/common/client.c, client/ai/ai.c: Added a logbot, as suggested
	by Andreas Steinel <lnxbil@users.sourceforge.net>
	* common/gtk/gtkbugs.c: Fixed and explained the guard around Gtk bug
	56070.

2010-12-10  Roland Clobus <rclobus@rclobus.nl>
	* client/common/client.c: Don't process zero num_soldiers on
	reconnect, to avoid setting statistics for viewers.

2010-12-08  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/gtkbugs.c, common/gtk/gtkbugs.h, client/gtk/gold.c,
	client/gtk/player.c, client/gtk/discard.c: Remove code for column
	resizing (was needed only for Gtk+ 2.6)

2010-12-07  Roland Clobus <rclobus@rclobus.nl>