@@ -192,6 +192,9 @@ static void update_game_settings(const GameParams * params)
 	game_rules_set_victory_at_end_of_turn(GAMERULES(game_rules),
 					      params->
 					      check_victory_at_end_of_turn);
+	game_rules_set_use_cities_and_knights_rules(GAMERULES(game_rules),
+						    params->
+						    use_cities_and_knights_rules);
 	game_rules_set_random_terrain(GAMERULES(game_rules),
 				      params->random_terrain);
 	game_rules_set_sevens_rule(GAMERULES(game_rules),
@@ -271,6 +274,9 @@ static void start_clicked_cb(G_GNUC_UNUSED GtkButton * start_btn,
 		params->check_victory_at_end_of_turn =
 		    game_rules_get_victory_at_end_of_turn(GAMERULES
 							  (game_rules));
+		params->use_cities_and_knights_rules =
+		    game_rules_get_use_cities_and_knights_rules(GAMERULES
+								(game_rules));
 		cfg_set_sevens_rule(params,
 				    game_rules_get_sevens_rule(GAMERULES
 							       (game_rules)));
@@ -317,6 +323,9 @@ static void start_clicked_cb(G_GNUC_UNUSED GtkButton * start_btn,
 			config_set_int("game/check-victory-at-end-of-turn",
 				       params->
 				       check_victory_at_end_of_turn);
+			config_set_int("game/use-cities-and-knights-rules",
+				       params->
+				       use_cities_and_knights_rules);
 			config_set_int("game/sevens-rule",
 				       params->sevens_rule);
 			config_set_int("game/use-pirate",
@@ -602,6 +611,11 @@ static GtkWidget *build_interface(GtkWindow * main_window)
 			   &default_returned);
 	if (!default_returned)
 		params->check_victory_at_end_of_turn = temp;
+	temp =
+	    config_get_int("game/use-cities-and-knights-rules",
+			   &default_returned);
+	if (!default_returned)
+		params->use_cities_and_knights_rules = temp;
 	temp = config_get_int("game/sevens-rule", &default_returned);
 	if (!default_returned)
 		cfg_set_sevens_rule(params, temp);
@@ -948,12 +962,15 @@ static void check_vp_cb(G_GNUC_UNUSED GObject * caller,
 			       (GAMESETTINGS(game_settings)));
 	params->check_victory_at_end_of_turn =
 	    game_rules_get_victory_at_end_of_turn(GAMERULES(game_rules));
+	params->use_cities_and_knights_rules =
+	    game_rules_get_use_cities_and_knights_rules(GAMERULES
+							(game_rules));
 	cfg_set_sevens_rule(params,
-			    game_rules_get_sevens_rule
-			    (GAMERULES(game_rules)));
+			    game_rules_get_sevens_rule(GAMERULES
+						       (game_rules)));
 	cfg_set_terrain_type(params,
-			     game_rules_get_random_terrain
-			     (GAMERULES(game_rules)));
+			     game_rules_get_random_terrain(GAMERULES
+							   (game_rules)));
 	params->strict_trade =
 	    game_rules_get_strict_trade(GAMERULES(game_rules));
 	params->use_pirate =
