@@ -2,6 +2,7 @@
 	* common/game.c, common/game.h, common/gtk/game-rules.c,
 	common/gtk/game-rules.h: Added checkbox to enable experimental
 	Cities and Knights expansion rules.
+	* server/gtk/main.c: Store the value of the checkbox.
 
 2011-01-26  Roland Clobus <rclobus@rclobus.nl>
 	* configure.ac: Work version is 0.12.5.
